3chapter/control-flow/no-truthy-falsey-vals.err
error[E0308]: mismatched types
 --> no-truthy-falsey-vals.rs:4:8
  |
4 |     if n {  // rustc throws compile error because this is not a boolean expr.
  |        ^ expected `bool`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
